Fix bug with nav. bar color on small screens. (#308)

--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -156,7 +156,7 @@ $search-suggest-menu-top: 83px;
     header {
         height: 90px;
         nav {
-            background: $link-green;
+            background: $navbar-color;
             clear: left;
             height: 32px;
             padding: 0;
