--- a/gobotany/static/sass/site.scss
+++ b/gobotany/static/sass/site.scss
@@ -39,6 +39,7 @@ $visited-link-color: #666e0b;
 $active-link-color: #45aC11;
 
 $text-color: #000;
+$navbar-color: #508e31;
 $footer-background-color: #b4d57f;
 $login-box-background-color: #d3eaad;
 
